--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
 <title>Happy 2nd Anniversary Wishma ❤️</title>
 
 <style>
-*{box-sizing:border-box;}
+*{box-sizing:border-box;margin:0;padding:0;}
 body{
-  margin:0;
   font-family:'Segoe UI',sans-serif;
   background: linear-gradient(135deg,#ff758c,#ff7eb3);
-  overflow-x:hidden;
-  color:white;
+  overflow:hidden;
   text-align:center;
+  color:white;
 }
 
 /* Countdown */
@@ -24,6 +23,7 @@ body{
   font-size:80px;
   font-weight:bold;
   color:white;
+  text-shadow:0 0 15px black;
 }
 
 /* Gift */
@@ -33,6 +33,7 @@ body{
   top:50%;left:50%;
   transform:translate(-50%,-50%);
   cursor:pointer;
+  z-index:5;
 }
 .box{
   width:150px;height:150px;
@@ -60,30 +61,74 @@ body{
 /* Main Content */
 #content{
   display:none;
-  padding:40px 20px;
-  position:relative;
+  position:fixed;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  width:90%;
+  max-width:400px;
+  z-index:1;
 }
 #bouquet{
   width:220px;
   margin-top:20px;
+  z-index:1;
+  position:relative;
 }
-
-/* Title BELOW bouquet */
 #title{
-  margin-top:20px;
-  font-size:26px;
+  font-size:28px;
   font-weight:bold;
-  color:white;
-  text-shadow:0 0 15px rgba(0,0,0,0.4);
+  margin-bottom:20px;
+  text-shadow:0 0 15px rgba(0,0,0,0.5);
+  z-index:2;
 }
 
-/* Floating PNG Photos */
+/* Proposal Section */
+#proposal{
+  position:fixed;
+  bottom:40px;
+  width:100%;
+  text-align:center;
+  z-index:2;
+}
+#proposal h2{
+  font-size:28px;
+  color:white;
+  text-shadow:0 0 20px #ffefc4;
+  animation:glowText 2s infinite alternate;
+  margin-bottom:15px;
+}
+@keyframes glowText{
+  from{text-shadow:0 0 15px #fff,0 0 30px #ffb6c1;}
+  to{text-shadow:0 0 30px #fff,0 0 50px #ff4d6d;}
+}
+.yesBtn{
+  padding:12px 30px;
+  font-size:20px;
+  border:none;
+  border-radius:40px;
+  background:white;
+  color:#ff4d6d;
+  cursor:pointer;
+  box-shadow:0 0 10px #ff4d6d;
+  animation:glowButton 1.5s infinite alternate;
+}
+@keyframes glowButton{
+  from{box-shadow:0 0 15px #ff4d6d;}
+  to{box-shadow:0 0 35px #ff4d6d;}
+}
+.yesBtn:hover{
+  transform:scale(1.1);
+}
+
+/* Floating Photos */
 .memory{
   position:absolute;
   width:90px;
   border-radius:12px;
   animation:floatUp linear forwards;
   box-shadow:0 0 15px rgba(255,255,255,0.6);
+  z-index:0;
 }
 @keyframes floatUp{
   0%{transform:translateY(0);opacity:0;}
@@ -100,32 +145,12 @@ body{
   background:rgba(0,0,0,0.85);
   justify-content:center;
   align-items:center;
-  z-index:5;
+  z-index:10;
 }
 #photoModal img{
   max-width:85%;
   border-radius:20px;
 }
-
-/* Envelopes Around Bouquet */
-.envelopes{
-  position:relative;
-  width:100%;
-  margin-top:-180px;
-  height:0;
-}
-.envelope{
-  position:absolute;
-  font-size:28px;
-  cursor:pointer;
-  animation:floatEnvelope 3s ease-in-out infinite alternate;
-}
-@keyframes floatEnvelope{
-  from{transform:translateY(0);}
-  to{transform:translateY(-15px);}
-}
-
-/* Letter */
 .letterBox{
   background:white;
   color:#c9184a;
@@ -138,34 +163,32 @@ body{
   text-align:left;
 }
 
-/* Proposal */
-#proposal{
-  display:none;
-  margin-top:40px;
+/* Envelopes around bouquet */
+.envelopes{
+  position:relative;
+  width:100%;
+  margin-top:-180px;
+  height:0;
+  z-index:2;
 }
-#proposal h2{
-  color:white;
-  text-shadow:0 0 15px rgba(0,0,0,0.4);
-}
-.yesBtn{
-  padding:12px 30px;
-  border:none;
-  border-radius:40px;
-  font-size:18px;
-  background:white;
-  color:#ff4d6d;
+.envelope{
+  position:absolute;
+  font-size:28px;
   cursor:pointer;
+  animation:floatEnvelope 3s ease-in-out infinite alternate;
 }
-.yesBtn:hover{
-  transform:scale(1.1);
+@keyframes floatEnvelope{
+  from{transform:translateY(0);}
+  to{transform:translateY(-15px);}
 }
 
-/* Forever */
+/* Forever Message */
 #foreverMessage{
   display:none;
   font-size:36px;
-  margin-top:30px;
-  text-shadow:0 0 20px white;
+  margin-top:20px;
+  text-shadow:0 0 20px #fff;
+  z-index:3;
 }
 
 /* Fireworks */
@@ -173,10 +196,11 @@ canvas{
   position:fixed;
   top:0;left:0;
   pointer-events:none;
+  z-index:0;
 }
+
 </style>
 </head>
-
 <body>
 
 <audio id="bgMusic" src="romantic.mp3" loop></audio>
@@ -192,42 +216,40 @@ canvas{
 </div>
 
 <div id="content">
-  <img id="bouquet" src="bouquet.png">
   <div id="title">Happy 2nd Anniversary Wishma ❤️</div>
+  <img id="bouquet" src="bouquet.png">
 
-  <!-- 6 Envelopes Around Bouquet -->
+  <!-- Envelopes -->
   <div class="envelopes">
-    <div class="envelope" style="left:20%;top:-40px;" onclick="openLetter()">💌</div>
-    <div class="envelope" style="left:70%;top:-60px;" onclick="openLetter()">💌</div>
-    <div class="envelope" style="left:10%;top:-120px;" onclick="openLetter()">💌</div>
-    <div class="envelope" style="left:80%;top:-120px;" onclick="openLetter()">💌</div>
-    <div class="envelope" style="left:40%;top:-150px;" onclick="openLetter()">💌</div>
-    <div class="envelope" style="left:60%;top:-180px;" onclick="openLetter()">💌</div>
+    <div class="envelope" style="left:10%;" onclick="openLetter()">💌</div>
+    <div class="envelope" style="left:30%;" onclick="openLetter()">💌</div>
+    <div class="envelope" style="left:50%;" onclick="openLetter()">💌</div>
+    <div class="envelope" style="left:70%;" onclick="openLetter()">💌</div>
+    <div class="envelope" style="left:85%;" onclick="openLetter()">💌</div>
   </div>
-
-  <div id="proposal">
-    <h2>Will You Stay Forever With Me? 💍</h2>
-    <button class="yesBtn" onclick="sayYes()">YES ❤️</button>
-  </div>
-
-  <div id="foreverMessage">Forever & Always 💖</div>
 </div>
 
-<!-- Letter -->
+<div id="proposal">
+  <h2>Will You Stay Forever With Me? 💍</h2>
+  <button class="yesBtn" onclick="sayYes()">YES ❤️</button>
+</div>
+
+<div id="foreverMessage">Forever & Always 💖</div>
+
 <div id="letterModal" onclick="this.style.display='none'">
   <div class="letterBox">
     <h3>To My Dearest Wishma 💖</h3>
     <p>
-    Two years ago, you entered my life and changed everything.  
-    Your smile became my peace.  
-    Your voice became my comfort.  
-    Your love became my world.  
-    <br><br>
-    Through every moment, I choose you again and again.  
-    Today, tomorrow, and forever.  
-    <br><br>
-    Happy Anniversary my love ❤️  
-    — Your Husband
+      Two years ago, you entered my life and changed everything.  
+      Your smile became my peace.  
+      Your voice became my comfort.  
+      Your love became my world.  
+      <br><br>
+      Through every moment, I choose you again and again.  
+      Today, tomorrow, and forever.  
+      <br><br>
+      Happy Anniversary my love ❤️  
+      — Your Husband
     </p>
   </div>
 </div>
@@ -257,32 +279,25 @@ gift.onclick=function(){
     content.style.display="block";
     bgMusic.play();
     startMemories();
-    setTimeout(()=>{proposal.style.display="block";},5000);
   },800);
 };
 
-/* PNG Photos */
-const photos=[
-"photo1.png","photo2.png","photo3.png","photo4.png","photo5.png",
-"photo6.png","photo7.png","photo8.png","photo9.png","photo10.png"
-];
+const photos=["photo1.png","photo2.png","photo3.png","photo4.png","photo5.png","photo6.png","photo7.png","photo8.png","photo9.png","photo10.png"];
 
 function createMemory(){
   let img=document.createElement("img");
   img.src=photos[Math.floor(Math.random()*photos.length)];
   img.className="memory";
-  img.style.left=Math.random()*100+"vw";
   img.style.bottom="-100px";
+  img.style.left=(Math.random()*80+10)+"%";
   img.style.animationDuration=(10+Math.random()*5)+"s";
   img.onclick=()=>{modalImg.src=img.src;photoModal.style.display="flex";}
   document.body.appendChild(img);
   setTimeout(()=>{img.remove();},15000);
 }
-function startMemories(){ setInterval(createMemory,1000); }
+function startMemories(){ setInterval(createMemory,1200); }
 
-function openLetter(){
-  letterModal.style.display="flex";
-}
+function openLetter(){ letterModal.style.display="flex"; }
 
 /* Fireworks */
 const canvas=document.getElementById("fireworks");
@@ -317,7 +332,6 @@ function startFireworks(){
   animate();
 }
 function sayYes(){
-  proposal.style.display="none";
   foreverMessage.style.display="block";
   startFireworks();
 }
